cabal-version:  1.12
name:           toon
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/hesselink/toon#readme>
homepage:       https://github.com/hesselink/toon#readme
bug-reports:    https://github.com/hesselink/toon/issues
author:         Erik Hesselink
maintainer:     hesselink@gmail.com
copyright:      2022 Erik Hesselink
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/hesselink/toon

library
  exposed-modules:
      OAuth
      OAuth.Types
      Toon
  hs-source-dirs:
      src
  build-depends: base >=4.7 && <5
      , aeson
      , bytestring
      , http-client
      , http-client-tls
      , http-types
      , network-uri
      , text
      , time
      , utf8-string
  default-language: Haskell2010

executable toon-exe
  main-is: Main.hs
  other-modules:
    Config
    CmdLine
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , http-client
    , http-client-tls
    , optparse-applicative
    , time
    , toon
    , yaml
  default-language: Haskell2010

test-suite toon-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , toon
  default-language: Haskell2010
